# armnn_tflite_backend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.QA  Dockerfile.QA.dockerignore  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml  triton_build.yml
cmake/: TritonArmNNBackendConfig.cmake.in  TritonArmNNTFLiteBackendConfig.cmake.in  TritonTFLiteBackendConfig.cmake.in
patches/: acl_21_08.patch  acl_21_11.patch  tflite_armnn_delegate.patch  tflite_armnn_delegate22.patch  tflite_armnn_delegate23.patch  tflite_bazel_build.patch  tflite_bazel_build_with_xnnpack.patch  xnnpack_commit.patch
qa/: README.md  config-template.pbtxt  conftest.py  pytest.ini
qa/helpers/: helper_functions.py  image_helper.py  triton_model_config.py
qa/tests/: armnn_singelton_test.py  basic_model_test.py  image_classification_model_test.py  model_config_test.py  model_load_test.py  multi-model-test.py  multi_model_test.py  object_detection_model_test.py  thread_count_test.py  triton_qa_test.py
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_1_bool/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_1_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_1_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_1_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_3_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_3_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_nobatch_zero_3_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_1_bool/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_1_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_1_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_1_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_3_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_3_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_identity_model_repository/armnn_tflite_zero_3_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_float16_float16_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_float16_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_float32_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_float32_int32_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int16_int16_int16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_float16_int16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_int32_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_int32_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_int8_int16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_int8_int8/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_object_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int32_object_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int64_int64_int64/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int8_int32_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_int8_int8_int8/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_float16_float16_float16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_float16_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_float32_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_float32_int32_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int16_int16_int16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int32_float16_int16/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int32_float32_float32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int32_int32_int32/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int32_int32_object/: config.pbtxt
qa/triton_qa_models/21.09/qa_model_repository/armnn_tflite_nobatch_int32_int8_int16/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/add/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/conv2d/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/inceptionv3/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/inceptionv3_dynamic/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/mobilenet_v1_1.0_224/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/mobilenet_v2_1.0_224/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/mobilenet_v3_large_100_224/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/resnet_v2_101_fp32/: config.pbtxt
qa/triton_qa_models/accuracy_test_model_repo/ssd_mobilenet_v1_coco/: config.pbtxt
src/: armnn.cc  armnn_utils.cc  armnn_utils.h  config.h  model_instance.cc  model_instance.h  model_instance_main.cc  model_instance_utils.h  papi_profiler.cc  papi_profiler.h  tflite.cc  tflite_utils.cc  tflite_utils.h
src/model_instance/: model_instance.cc  model_instance.h  model_instance_main.cc  model_instance_utils.h  papi_profiler.cc
(+128 files in other folders)
